Modified the textbox script to use just one

--- a/CustomElements/HTML_test/test_file.html
+++ b/CustomElements/HTML_test/test_file.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Test File</title>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <style>
         body {
             display: flex;
@@ -17,7 +16,7 @@
     </style>
 </head>
 <body>
-    <div class="textbox-google-style"></div>
-    <script src="../javascript/textbox_google_style.js"></script>
+    <div class="textbox-style">teams_style</div>
+    <script src="../javascript/custome_elements.js"></script>
 </body>
 </html>
