Progress bar added and textbox style 1

--- a/CustomElements/HTML_test/progress_bar.html
+++ b/CustomElements/HTML_test/progress_bar.html
@@ -4,9 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="../css/customStyles.css">
+    <!-- <link rel="stylesheet" href="../css/progress_bar.css"> -->
+    <style>
+        body {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            width: 100%;
+            height: 100vh;
+            background: #cecece;
+        }
+    </style>
 </head>
 <body>
-    <div class="progress-bar" data-label="Loading..."></div>
+    <div class="progress-bar" data-label="Loading..." style="--width: 50;"></div>
+    <script src="../javascript/progress_bar.js"></script>
 </body>
 </html>
