--- a/CustomElements/HTML_test/test_file.html
+++ b/CustomElements/HTML_test/test_file.html
@@ -16,7 +16,7 @@
     </style>
 </head>
 <body>
-    <div class="textbox-style">teams_style</div>
+    <div class="textbox-style">style_1</div>
     <script src="../javascript/custome_elements.js"></script>
 </body>
 </html>
