--- a/CustomElements/HTML_test/checkbox_style_1.html
+++ b/CustomElements/HTML_test/checkbox_style_1.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Test File</title>
+    <title>Document</title>
+    <link rel="stylesheet" href="../css/customCheckbox.css">
     <style>
         body {
             display: flex;
@@ -11,12 +12,16 @@
             align-items: center;
             width: 100%;
             height: 100vh;
-            background: #ececec;
+            background: #dadada;
         }
     </style>
 </head>
 <body>
-    <div class="textbox-style">style_2</div>
-    <script src="../javascript/custome_elements.js"></script>
+    <div class="checkbox-style switch-btn">
+        <label>
+            <input type="checkbox">
+            <span></span>
+        </label>
+    </div> 
 </body>
 </html>
